# Voxylium

./: .gitignore  README.md  voxylium.code-workspace
Voxylium/: CMakeLists.txt  library.h  voxylium.cpp  voxylium.h  voxylium_exception.h
Voxylium/Window/: window.cpp  window.h
Voxylium/cmake/: FindGLFW.cmake
Voxylium_example/: CMakeLists.txt  main.cpp
Voxylium_example/cmake/: FindVoxylium.cmake
voxylium/: Cargo.toml
voxylium_example/: Cargo.toml
voxylium_example/src/: main.rs
